# hellosynk

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  WORDPRESS_EMBED.md  push_to_github.sh  pyproject.toml  requirements.txt  setup.py  test_import.py  wordpress_embed_snippet.html
docs/: ARCHITECTURE.md
examples/: basic_usage.py  create_custom_skill.py  full_capabilities_test.py
hellosynk/: __init__.py
hellosynk/cli/: __init__.py  main.py
hellosynk/core/: __init__.py  hellosynk.py  llm.py  memory.py  mindai.py  storage.py
hellosynk/skills/: __init__.py  base.py  calendar_skill.py  email_skill.py  notion_skill.py  registry.py  self_learning_example.py  self_learning_skill.py  time_skill.py
hellosynk/web/: __init__.py  server.py  wordpress_shortcode.php
mindai/: __init__.py
mindai/cli/: __init__.py  main.py
mindai/core/: __init__.py  mindai.py  storage.py
mindai/skills/: __init__.py  base.py  calendar_skill.py  email_skill.py  notion_skill.py  registry.py
